--- a/styling/pages/diary.scss
+++ b/styling/pages/diary.scss
@@ -3,26 +3,37 @@
 @import "./index";
 
 main {
-    background-color: $primary-color;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+  background-color: $primary-color;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding-top: 5%;
+  padding-bottom: 5%;
 
-    article {
-        margin: 10% 1%;
-        background-color: $base-color;
-        padding: 24px;
-        text-align: center;
-        color: $primary-color;
+  article {
+    margin: 3% 1%;
+    background-color: $base-color;
+    padding: 24px;
+    text-align: center;
 
-        section {
-                width: 220px;
-            
-            img {
-                width: 100%;
-                height: auto;
-                object-fit: contain;
-        }
+    a {
+      text-decoration: none;
+      color: $primary-color;
+
+      &:hover {
+        color: $secondary-color;
     }
+}
+    
+
+    section {
+      width: 220px;
+
+      img {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
     }
+  }
 }
