--- a/styling/pages/enquiry.scss
+++ b/styling/pages/enquiry.scss
@@ -4,6 +4,7 @@
 
 body {
   background-color: $secondary-color;
+  margin-bottom: 0;
 
   main {
     display: flex;
@@ -40,6 +41,10 @@ body {
         }
       }
 
+      .submit-btn {
+        display:flex;
+        justify-content: center;
+      
       .submit {
         background-color: $secondary-color;
         border: 2px solid white;
@@ -54,6 +59,7 @@ body {
         }
       }
     }
+  }
 
     .contact-section {
       background-color: $base-color;
@@ -70,7 +76,7 @@ body {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      align-items: stretch;
+      height: auto;
 
       .please {
         padding-top: 7%;
@@ -79,20 +85,24 @@ body {
       }
 
       form {
+        width: 50%;
         align-items: center;
         padding-top: 7%;
         flex-grow: 5;
-        align-items: stretch;
       }
 
       .contact-section {
         text-align: right;
         padding-top: 7%;
-        margin-right: 0%;
-        align-self: stretch;
+        margin-right: 0;
+        margin-bottom: 0;
+        height: auto;
+        background-color: $base-color;
 
         .contact-words {
           text-align: right;
+          align-self: stretch;
+
         }
       }
     }
