--- a/styling/pages/meet.css
+++ b/styling/pages/meet.css
@@ -10,6 +10,7 @@ h2 {
 p {
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
+  line-height: 1rem;
 }
 
 .name {
@@ -56,6 +57,7 @@ h2 {
 p {
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
+  line-height: 1rem;
 }
 
 .name {
@@ -167,6 +169,7 @@ h2 {
 p {
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
+  line-height: 1rem;
 }
 
 .name {
@@ -280,6 +283,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
 }
 
 body {
