--- a/styling/pages/meet.scss
+++ b/styling/pages/meet.scss
@@ -1,14 +1,14 @@
 @import "./index";
 
 body {
-  background-color: $secondary-color;
+  background-color: $base-color;
 
   main {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 
-    .history {
-      background-color: $base-color;
+    .bio {
       color: $primary-color;
       padding: 10%;
       text-align: justify;
@@ -16,80 +16,79 @@ body {
     }
 
     .pilot-title {
-    background-color: $primary-color;
-    color: white;
-    padding: 10%;
-    text-align: justify;
-    width: 100%;
+      background-color: $primary-color;
+      color: white;
+      padding: 10%;
+      text-align: justify;
+      width: 100%;
     }
 
     .pictures {
-        background-color: $secondary-color;
+      background-color: $secondary-color;
     }
 
-    .right-time {
-        background-color: $base-color;
-        color: $primary-color;
-        padding: 10%;
-        text-align: justify;
-        width: 100%;
-        }
-
-    .bio {
-        background-color: $base-color;
-        color: $primary-color;
-        padding: 10%;
-        text-align: justify;
-        width: 100%;
-        }
-
-      @media screen and (max-width: $medium) {
-        .pictures {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-
-
-          img {
-            width: 80%;
-            height: auto;
-            object-fit: contain;
-            padding-top: 10%;
-          }
-
-          img:last-child {
-            padding-bottom: 10%;
-          }
+    .stories-btn {
+      background-color: $base-color;
+      border: 2px solid $secondary-color;
+      border-radius: 5px;
+      font-family: "Quicksand", sans-serif;
+      height: 2.2rem;
+      margin-bottom: 15%;
+  
+      a {
+        text-decoration: none;
+        color: $secondary-color;
+      }
+  
+      &:hover {
+        background-color: $secondary-color;
+        color: $base-color;
+  
+        a {
+          text-decoration: none;
+          color: $base-color;
         }
       }
+    }
 
-      @media screen and (min-width: $medium) {
-        .history {
-          padding: 7%;
+    @media screen and (max-width: $medium) {
+      .pictures {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        img {
+          width: 80%;
+          height: auto;
+          object-fit: contain;
+          padding-top: 10%;
         }
 
-        .pilot-title {
-          padding: 7%;
+        img:last-child {
+          padding-bottom: 10%;
         }
+      }
+    }
 
-        .pictures {
-          display: flex;
-          justify-content: space-between;
-          padding: 7%;
+    @media screen and (min-width: $medium) {
+      .bio {
+        padding: 7%;
+      }
 
-          img {
-            height: auto;
-            width: 31%;
-          }
-        }
+      .pilot-title {
+        padding: 7%;
+      }
 
-        .right-time {
-          padding: 7%;
-        }
+      .pictures {
+        display: flex;
+        justify-content: space-between;
+        padding: 7%;
 
-        .bio {
-            padding: 7%;
+        img {
+          height: auto;
+          width: 31%;
         }
       }
     }
   }
+}
