--- a/styling/pages/home.css
+++ b/styling/pages/home.css
@@ -329,4 +329,33 @@ body .cafe-pic img {
   padding: 10%;
   width: 80%;
   height: auto;
+}
+@media screen and (min-width: 768px) {
+  body .tagline h2 {
+    font-size: 2.1rem;
+  }
+  body .tagline p {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+  }
+  body .meet-btn {
+    background-color: #21453E;
+    border: 2px solid white;
+    border-radius: 5px;
+    font-family: "Quicksand", sans-serif;
+    height: 2.5rem;
+  }
+  body .meet-btn a {
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+  }
+  body .meet-btn:hover {
+    background-color: white;
+    color: #21453E;
+  }
+  body .meet-btn:hover a {
+    text-decoration: none;
+    color: #21453E;
+  }
 }/*# sourceMappingURL=home.css.map */
