--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -53,4 +53,43 @@ body {
         height: auto;
     }
   }
+
+
+  @media screen and (min-width: $large) {
+
+    .tagline h2 {
+      font-size: 2.1rem;
+    }
+
+    .tagline p {
+      font-size: 1.1rem;
+      line-height: 1.5rem;
+    }
+
+    // button
+    .meet-btn {
+      background-color: $primary-color;
+      border: 2px solid white;
+      border-radius: 5px;
+      font-family: "Quicksand", sans-serif;
+      height: 2.5rem;
+  
+      a {
+          text-decoration: none;
+          color: white;
+          font-size: 1rem;
+  
+      }
+  
+      &:hover {
+        background-color: white;
+        color: $primary-color;
+  
+        a {
+          text-decoration: none;
+          color: $primary-color;
+        }
+      }
+    }
+  }
 }
