--- a/styling/pages/meet.scss
+++ b/styling/pages/meet.scss
@@ -23,6 +23,37 @@ body {
       width: 100%;
     }
 
+    .resume {
+      background-color: $primary-color;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+
+      .resume-btn {
+        background-color: $primary-color;
+        border: 2px solid white;
+        border-radius: 5px;
+        font-family: "Quicksand", sans-serif;
+        height: 2.2rem;
+        margin-bottom: 10%;
+
+        a {
+          text-decoration: none;
+          color: white;
+        }
+
+        &:hover {
+          background-color: white;
+          color: $primary-color;
+
+          a {
+            text-decoration: none;
+            color: $primary-color;
+          }
+        }
+      }
+    }
+
     .pictures {
       background-color: $secondary-color;
     }
@@ -34,16 +65,16 @@ body {
       font-family: "Quicksand", sans-serif;
       height: 2.2rem;
       margin-bottom: 15%;
-  
+
       a {
         text-decoration: none;
         color: $secondary-color;
       }
-  
+
       &:hover {
         background-color: $secondary-color;
         color: $base-color;
-  
+
         a {
           text-decoration: none;
           color: $base-color;
