--- a/styling/defaults/_text.scss
+++ b/styling/defaults/_text.scss
@@ -10,7 +10,16 @@ h2 {
 p {
     font-family: 'Quicksand', sans-serif;
     font-size: 0.9rem;
-    line-height: 1rem;
+    line-height: 1.5;
+}
+
+// list items
+ul {
+    li {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 0.9rem;
+    line-height: 1.5;
+    }
 }
 
 // header
