--- a/styling/pages/blog.scss
+++ b/styling/pages/blog.scss
@@ -22,6 +22,7 @@
   }
 }
 
+  //button through to enquiry page
   .enquiry-btn {
     background-color: $base-color;
     border: 2px solid $secondary-color;
