--- a/styling/components/_footer.scss
+++ b/styling/components/_footer.scss
@@ -5,8 +5,11 @@
 footer {
   background-color: $primary-color;
   color: white;
-  margin-top: auto;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
 
   .socials a i {
     text-decoration: none;
@@ -14,6 +17,7 @@ footer {
   }
 }
 
+// for mobile view
 @media screen and (max-width: $medium) {
   .signature {
     font-size: 24px;
@@ -39,6 +43,7 @@ footer {
   }
 }
 
+// for tablet view
 @media screen and (min-width: $medium) {
   .signature {
     font-size: 32px;
@@ -56,7 +61,7 @@ footer {
     font-size: 14px;
     display: flex;
     justify-content: center;
-    
+
     a {
       padding-left: 3%;
       padding-right: 3%;
@@ -64,6 +69,7 @@ footer {
   }
 }
 
+// for desktop view
 @media screen and (min-width: $large) {
   .signature {
     font-size: 36px;
