--- a/styling/pages/diary.css
+++ b/styling/pages/diary.css
@@ -10,7 +10,13 @@ h2 {
 p {
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
-  line-height: 1rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Quicksand", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 .name {
@@ -48,8 +54,11 @@ label {
 footer {
   background-color: #21453E;
   color: white;
-  margin-top: auto;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
 }
 footer .socials a i {
   text-decoration: none;
@@ -131,7 +140,13 @@ h2 {
 p {
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
-  line-height: 1rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Quicksand", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 .name {
@@ -243,7 +258,13 @@ h2 {
 p {
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
-  line-height: 1rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Quicksand", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 .name {
@@ -290,7 +311,13 @@ h2 {
 p {
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
-  line-height: 1rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Quicksand", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 .name {
@@ -402,7 +429,13 @@ h2 {
 p {
   font-family: "Quicksand", sans-serif;
   font-size: 0.9rem;
-  line-height: 1rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Quicksand", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
 }
 
 .name {
@@ -440,8 +473,11 @@ label {
 footer {
   background-color: #21453E;
   color: white;
-  margin-top: auto;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
 }
 footer .socials a i {
   text-decoration: none;
