--- a/styling/pages/diary.scss
+++ b/styling/pages/diary.scss
@@ -10,6 +10,7 @@ main {
   padding-top: 5%;
   padding-bottom: 5%;
 
+  // blog posts
   article {
     margin: 3% 1%;
     background-color: $base-color;
@@ -22,9 +23,8 @@ main {
 
       &:hover {
         color: $secondary-color;
+      }
     }
-}
-    
 
     section {
       width: 220px;
