--- a/styling/pages/enquiry.scss
+++ b/styling/pages/enquiry.scss
@@ -42,20 +42,20 @@ body {
       }
 
       .submit-btn {
-        display:flex;
+        display: flex;
         justify-content: center;
-      
-        .submit {
-        background-color: $secondary-color;
-        border: 2px solid white;
-        border-radius: 5px;
-        color: white;
-        font-family: "Quicksand", sans-serif;
-        height: 2.2rem;
+
+        .btn-text {
+          background-color: $secondary-color;
+          border: 2px solid white;
+          border-radius: 5px;
+          color: white;
+          font-family: "Quicksand", sans-serif;
+          height: 2.2rem;
 
           &:hover {
-          background-color: white;
-          color: $secondary-color;
+            background-color: white;
+            color: $secondary-color;
           }
         }
       }
@@ -71,6 +71,7 @@ body {
     }
   }
 
+  // for desktop view
   @media screen and (min-width: $large) {
     main {
       display: flex;
@@ -101,7 +102,6 @@ body {
         .contact-words {
           text-align: right;
           align-self: stretch;
-
         }
       }
     }
