--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -6,7 +6,6 @@ body {
   flex-wrap: wrap;
   justify-content: center;
 
-  
   .tagline {
     color: white;
     padding: 10%;
@@ -14,10 +13,11 @@ body {
     width: 80%;
 
     p {
-        padding-bottom: 5%;
+      padding-bottom: 5%;
     }
   }
 
+  // button through to meet me page
   .meet-btn {
     background-color: $primary-color;
     border: 2px solid white;
@@ -26,9 +26,8 @@ body {
     height: 2.2rem;
 
     a {
-        text-decoration: none;
-        color: white;
-
+      text-decoration: none;
+      color: white;
     }
 
     &:hover {
@@ -46,17 +45,16 @@ body {
     display: flex;
     justify-content: center;
     background-color: $secondary-color;
-    
+
     img {
-        padding: 10%;
-        width: 80%;
-        height: auto;
+      padding: 10%;
+      width: 80%;
+      height: auto;
     }
   }
 
-
+  // for desktop view
   @media screen and (min-width: $large) {
-
     .tagline h2 {
       font-size: 2.1rem;
     }
@@ -66,29 +64,11 @@ body {
       line-height: 1.5rem;
     }
 
-    // button
     .meet-btn {
-      background-color: $primary-color;
-      border: 2px solid white;
-      border-radius: 5px;
-      font-family: "Quicksand", sans-serif;
-      height: 2.5rem;
-  
+      height: 5rem;
+
       a {
-          text-decoration: none;
-          color: white;
-          font-size: 1rem;
-  
-      }
-  
-      &:hover {
-        background-color: white;
-        color: $primary-color;
-  
-        a {
-          text-decoration: none;
-          color: $primary-color;
-        }
+        font-size: 1rem;
       }
     }
   }
