--- a/styling/pages/meet.scss
+++ b/styling/pages/meet.scss
@@ -23,6 +23,7 @@ body {
       width: 100%;
     }
 
+    // button to resume in external pdf
     .resume {
       background-color: $primary-color;
       width: 100%;
@@ -58,6 +59,7 @@ body {
       background-color: $secondary-color;
     }
 
+    // button through to developer diaries
     .stories-btn {
       background-color: $base-color;
       border: 2px solid $secondary-color;
@@ -82,6 +84,7 @@ body {
       }
     }
 
+    // for mobile view
     @media screen and (max-width: $medium) {
       .pictures {
         display: flex;
@@ -101,6 +104,7 @@ body {
       }
     }
 
+    // for tablet view
     @media screen and (min-width: $medium) {
       .bio {
         padding: 7%;
@@ -119,6 +123,59 @@ body {
           height: auto;
           width: 31%;
         }
+      }
+    }
+  }
+
+  // for desktop view
+  @media screen and (min-width: $large) {
+    .bio {
+      padding: 7%;
+
+      h2 {
+        font-size: 2rem;
+      }
+
+      p {
+        font-size: 1rem;
+        line-height: 1.5;
+      }
+    }
+
+    .pilot-title {
+      padding: 7%;
+
+      h2 {
+        font-size: 2rem;
+      }
+    }
+
+    .pictures {
+      display: flex;
+      justify-content: space-between;
+      padding: 7%;
+
+      img {
+        height: auto;
+        width: 31%;
+      }
+    }
+
+    .resume {
+      .resume-btn {
+        height: 2.5rem;
+
+        a {
+          font-size: 1rem;
+        }
+      }
+    }
+
+    .stories-btn {
+      height: 2.5rem;
+
+      a {
+        font-size: 1rem;
       }
     }
   }
