better breakpoints and sizing

--- a/styling/pages/enquiry.css
+++ b/styling/pages/enquiry.css
@@ -618,7 +618,7 @@ body main .contact-section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: auto;
+    height: 75vh;
   }
   body main .please {
     padding-top: 7%;
