--- a/styling/pages/enquiry.scss
+++ b/styling/pages/enquiry.scss
@@ -77,7 +77,7 @@ body {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      height: auto;
+      height: 75vh;
 
       .please {
         padding-top: 7%;
