--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -55,20 +55,23 @@ body {
 
   // for desktop view
   @media screen and (min-width: $large) {
-    .tagline h2 {
-      font-size: 2.1rem;
-    }
-
-    .tagline p {
-      font-size: 1.1rem;
-      line-height: 1.5rem;
-    }
-
-    .meet-btn {
-      height: 2.5rem;
-
-      a {
-        font-size: 1rem;
+    main {
+      
+      .tagline h2 {
+        font-size: 2.1rem;
+      }
+  
+      .tagline p {
+        font-size: 1.1rem;
+        line-height: 1.5rem;
+      }
+  
+      .meet-btn {
+        height: 2.5rem;
+  
+        a {
+          font-size: 1rem;
+        }
       }
     }
   }
