--- a/styling/defaults/_text.scss
+++ b/styling/defaults/_text.scss
@@ -8,7 +8,7 @@ h2 {
 }
 
 p {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 0.9rem;
     line-height: 1.5;
 }
@@ -16,7 +16,7 @@ p {
 // list items
 ul {
     li {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 0.9rem;
     line-height: 1.5;
     }
@@ -28,7 +28,7 @@ ul {
 }
 
 .nav-items {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 // footer 
@@ -37,24 +37,24 @@ ul {
 }
 
 .webdev {
-    font-family: "Quicksand", sans-serif;
+    font-family: "Raleway", sans-serif;
   }
 
   // enquiry form
 label {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .form-input {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Raleway', sans-serif;
 } 
 
 .form-message {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Raleway', sans-serif;
 } 
 
 #submit {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 
