changed font for better accessibility readability

--- a/styling/pages/blog.css
+++ b/styling/pages/blog.css
@@ -28,7 +28,7 @@ main .enquiry-btn {
   background-color: #E8EBD6;
   border: 2px solid #588077;
   border-radius: 5px;
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
   height: 2.2rem;
   margin-top: 5%;
   justify-content: center;
@@ -54,12 +54,12 @@ h2 {
   text-align: center;
 }
 p {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
 ul li {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
@@ -68,13 +68,13 @@ ul li {
   font-family: "Abril Fatface", cursive;
 }
 .nav-items {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 .signature {
   font-family: "Abril Fatface", cursive;
 }
 .webdev {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 header {
