--- a/styling/pages/enquiry.css
+++ b/styling/pages/enquiry.css
@@ -6,12 +6,12 @@ h2 {
   text-align: center;
 }
 p {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
 ul li {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
@@ -20,26 +20,26 @@ ul li {
   font-family: "Abril Fatface", cursive;
 }
 .nav-items {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 .signature {
   font-family: "Abril Fatface", cursive;
 }
 .webdev {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 label {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 .form-input {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 .form-message {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 #submit {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 header {
@@ -124,7 +124,7 @@ body main form .submit-btn .btn-text {
   border: 2px solid white;
   border-radius: 5px;
   color: white;
-  font-family: "Quicksand", sans-serif;
+  font-family: "Raleway", sans-serif;
   height: 2.2rem;
 }
 body main form .submit-btn .btn-text:hover {
